Sat Dec 11 17:34:03 EET 1999  Vadim Chekan  <vadim@etc.lviv.ua>

	* htdig/Retriever.cc,htdig/htdig.cc: "exclude_urls","bad_querystr"
	"bad_extensions","valid_extensions","local_default_doc"
	changed for new config.

	* htdig/Server.cc: "server_max_docs","server_wait_time" changed for
	 new config.

	* check for "limit_normalized" moved from Retriever::got_href and
	Retriever::got_redirect to more appropriate Retriever::IsValidUrl

Fri Dec 10 18:05:48 1999 Marcel Bosc   <bosc@ceic.com>

	* htword: checked for failed memory allocations in compression code

Fri Dec 10 18:03:42 1999  Marcel Bosc  <bosc@ceic.com>

	* htword/WordList,htcommon/HtWordList.cc,htmerge/words.cc: cleaned up WordList::Walk() 
	function, change two occurences of WordList::Walk in htdig files

Fri Dec 10 17:40:22 1999  Marcel Bosc  <bosc@ceic.com>

	* htword/WordKey.cc (Compare): Fixed bug: compare used to compare chars and not
	unsigned chars, this failed when non-ascii caracters were used

Fri Dec 10 11:54:36 1999  Marcel Bosc  <bosc@ceic.com>

	* htcommon/defaults.cc : doc for wordlist_cache_size 

Thu Dec 09 17:07:47 1999  Marcel Bosc  <bosc@ceic.com>

	* htcommon/defaults.cc: added defaults for compression and DB configuration 
	parameters

Thu Dec 09 16:47:54 1999  Loic Dachary  <loic@ceic.com>

	* db/dist/configure.in,Makefile.in: Added shared lib support
	  for linux only. Not enabled if not on linux.

Thu Dec 09 15:07:11 1999  Loic Dachary  <loic@ceic.com>

	* acinclude.m4,db/dist/acinclude.mr: CHECK_ZLIB now fails if either
	  zlib.h or libz is not found.

	* configure.in: do not test zlib.h

	* db/db/db.c,db/mp/mp_fopen.c: added #ifdef HAVE_ZLIB so that
	  compilation works if zlib is not found

	* htlib/.cvsignore: remove wrong *.cxx

	* test/dbbench.cc: added #ifdef HAVE_ZLIB so that
	  compilation works if zlib is not found

Thu Dec 09 13:25:45 1999  Marcel Bosc  <bosc@ceic.com>

	* test/Word.cc,t_wordlist,Makefile.am: upgraded tests