@@ -1,7 +1,7 @@
 /* A lexical scanner generated by flex */
 
 /* Scanner skeleton version:
- * $Header: /usr/data/kleinrob/htdig-zeugs/htdig.cvs/htdig/htcommon/conf_lexer.cxx,v 1.1.2.1 1999/12/09 10:46:33 bosc Exp $
+ * $Header: /usr/data/kleinrob/htdig-zeugs/htdig.cvs/htdig/htcommon/conf_lexer.cxx,v 1.1.2.2 1999/12/12 15:37:47 vadim Exp $
  */
 
 #define FLEX_SCANNER
@@ -289,28 +289,31 @@ static void yy_fatal_error YY_PROTO(( yyconst char msg[] ));
 	*yy_cp = '\0'; \
 	yy_c_buf_p = yy_cp;
 
-#define YY_NUM_RULES 21
-#define YY_END_OF_BUFFER 22
-static yyconst short int yy_acclist[79] =
+#define YY_NUM_RULES 22
+#define YY_END_OF_BUFFER 23
+static yyconst short int yy_acclist[100] =
     {   0,
-       16,   16,   22,   21,    3,   21,   20,   21,   11,   21,
-        5,   21,    8,   21,    8,   21,    3,   19,   21,    2,
-       19,   20,   21,   19,   21,   21,    3,   16,   21,   18,
-       21,   14,   21,   14,   21,   10,   14,   21,   14,   21,
-       17,   21,    6,   21,    7,   21,    9,   21,    3,    8,
-        8,    3,   19,    2,   19,   19,    1,    3,   16,   14,
-       14,   14,   14,   10,   14,   15,   17,    9,    8,   12,
-       13,   13,   14,    8,    8,    8,    4,    8
+       16,   16,   23,   21,   22,    3,   21,   22,   20,   21,
+       22,   11,   21,   22,    5,   21,   22,    8,   21,   22,
+        8,   21,   22,    3,   19,   21,   22,    2,   19,   20,
+       21,   22,   19,   21,   22,   21,   22,    3,   16,   21,
+       22,   18,   21,   22,   14,   21,   22,   14,   21,   22,
+       10,   14,   21,   22,   14,   21,   22,   17,   21,   22,
+        6,   21,   22,    7,   21,   22,    9,   21,   22,    3,
+        8,    8,    3,   19,    2,   19,   19,    1,    3,   16,
+       14,   14,   14,   14,   10,   14,   15,   17,    9,    8,
+       12,   13,   13,   14,    8,    8,    8,    4,    8
+
     } ;
 
 static yyconst short int yy_accept[61] =
     {   0,
         1,    1,    1,    2,    3,    3,    3,    3,    3,    3,
-        3,    4,    5,    7,    9,   11,   13,   15,   17,   20,
-       24,   26,   27,   30,   32,   34,   36,   39,   41,   43,
-       45,   47,   49,   50,   51,   52,   54,   56,   57,   57,
-       58,   60,   61,   62,   62,   63,   64,   66,   67,   68,
-       69,   70,   71,   72,   74,   75,   76,   77,   79,   79
+        3,    4,    6,    9,   12,   15,   18,   21,   24,   28,
+       33,   36,   38,   42,   45,   48,   51,   55,   58,   61,
+       64,   67,   70,   71,   72,   73,   75,   77,   78,   78,
+       79,   81,   82,   83,   83,   84,   85,   87,   88,   89,
+       90,   91,   92,   93,   95,   96,   97,   98,  100,  100
     } ;
 
 static yyconst int yy_ec[256] =
@@ -328,21 +331,21 @@ static yyconst int yy_ec[256] =
 
        17,   13,   13,   13,   18,   13,   13,   19,   13,   20,
        13,   13,   13,   13,   13,   13,   21,   13,   13,   13,
-       13,   13,    5,    5,    5,    5,    1,    1,    1,    1,
-        1,    1,    1,    1,    1,    1,    1,    1,    1,    1,
-        1,    1,    1,    1,    1,    1,    1,    1,    1,    1,
-        1,    1,    1,    1,    1,    1,    1,    1,    1,    1,
-        1,    1,    1,    1,    1,    1,    1,    1,    1,    1,
-        1,    1,    1,    1,    1,    1,    1,    1,    1,    1,
-        1,    1,    1,    1,    1,    1,    1,    1,    1,    1,
-        1,    1,    1,    1,    1,    1,    1,    1,    1,    1,
+       13,   13,    5,    5,    5,    5,    5,    5,    5,    5,
+        5,    5,    5,    5,    5,    5,    5,    5,    5,    5,
+        5,    5,    5,    5,    5,    5,    5,    5,    5,    5,
+        5,    5,    5,    5,    5,    5,    5,    5,    5,    5,
+        5,    5,    5,    5,    5,    5,    5,    5,    5,    5,
+        5,    5,    5,    5,    5,    5,    5,    5,    5,    5,
+        5,    5,    5,    5,    5,    5,    5,    5,    5,    5,
+        5,    5,    5,    5,    5,    5,    5,    5,    5,    5,
 
-        1,    1,    1,    1,    1,    1,    1,    1,    1,    1,
-        1,    1,    1,    1,    1,    1,    1,    1,    1,    1,
-        1,    1,    1,    1,    1,    1,    1,    1,    1,    1,
-        1,    1,    1,    1,    1,    1,    1,    1,    1,    1,
-        1,    1,    1,    1,    1,    1,    1,    1,    1,    1,
-        1,    1,    1,    1,    1
+        5,    5,    5,    5,    5,    5,    5,    5,    5,    5,
+        5,    5,    5,    5,    5,    5,    5,    5,    5,    5,
+        5,    5,    5,    5,    5,    5,    5,    5,    5,    5,
+        5,    5,    5,    5,    5,    5,    5,    5,    5,    5,
+        5,    5,    5,    5,    5,    5,    5,    5,    5,    5,
+        5,    5,    5,    5,    5
     } ;
 
 static yyconst int yy_meta[22] =
@@ -440,7 +443,7 @@ goto find_rule; \
 #define YY_MORE_ADJ 0
 #define YY_RESTORE_YY_MORE_OFFSET
 char *yytext;
-#line 1 "conf_lexer.lxx"
+#line 1 "../../htdig3/htcommon/conf_lexer.lxx"
 #define INITIAL 0
 /* HtConfiguration reader for ht://Dig  */
 #define YY_NO_UNPUT 1
@@ -452,7 +455,7 @@ char *yytext;
 
 #define br_string 4
 
-#line 10 "conf_lexer.lxx"
+#line 10 "../../htdig3/htcommon/conf_lexer.lxx"
 //#include <string.h>
 #include "HtConfiguration.h"
 //#include "Dictionary.h"
@@ -460,7 +463,7 @@ char *yytext;
 #define MAX_INCLUDE_DEPTH 10
 YY_BUFFER_STATE include_stack[MAX_INCLUDE_DEPTH];
 int include_stack_ptr = 0;
-#line 464 "lex.yy.c"
+#line 467 "lex.yy.c"
 
 /* Macros after this point can all be overridden by user definitions in
  * section 1.
@@ -611,13 +614,13 @@ YY_MALLOC_DECL
 YY_DECL
 	{
 	register yy_state_type yy_current_state;
-	register char *yy_cp = NULL, *yy_bp = NULL;
+	register char *yy_cp, *yy_bp;
 	register int yy_act;
 
-#line 23 "conf_lexer.lxx"
+#line 23 "../../htdig3/htcommon/conf_lexer.lxx"
 
 
-#line 621 "lex.yy.c"
+#line 624 "lex.yy.c"
 
 	if ( yy_init )
 		{
@@ -711,42 +714,42 @@ do_action:	/* This label is used only to access EOF actions. */
 	{ /* beginning of action switch */
 case 1:
 YY_RULE_SETUP
-#line 25 "conf_lexer.lxx"
+#line 25 "../../htdig3/htcommon/conf_lexer.lxx"
 /*   Ignore comments     */
 	YY_BREAK
 case 2:
 YY_RULE_SETUP
-#line 26 "conf_lexer.lxx"
+#line 26 "../../htdig3/htcommon/conf_lexer.lxx"
 /*   Ignore emty lines   */
 	YY_BREAK
 case 3:
 YY_RULE_SETUP
-#line 27 "conf_lexer.lxx"
+#line 27 "../../htdig3/htcommon/conf_lexer.lxx"
 /*   Ignore spaces       */
 	YY_BREAK
 case 4:
 YY_RULE_SETUP
-#line 28 "conf_lexer.lxx"
+#line 28 "../../htdig3/htcommon/conf_lexer.lxx"
 BEGIN(incl);
 	YY_BREAK
 case 5:
 YY_RULE_SETUP
-#line 29 "conf_lexer.lxx"
+#line 29 "../../htdig3/htcommon/conf_lexer.lxx"
 { BEGIN(bracket); return(T_LEFT_BR); }
 	YY_BREAK
 case 6:
 YY_RULE_SETUP
-#line 30 "conf_lexer.lxx"
+#line 30 "../../htdig3/htcommon/conf_lexer.lxx"
 return(T_SLASH);
 	YY_BREAK
 case 7:
 YY_RULE_SETUP
-#line 31 "conf_lexer.lxx"
+#line 31 "../../htdig3/htcommon/conf_lexer.lxx"
 return(T_RIGHT_BR);
 	YY_BREAK
 case 8:
 YY_RULE_SETUP
-#line 32 "conf_lexer.lxx"
+#line 32 "../../htdig3/htcommon/conf_lexer.lxx"
 {
 			//yylval.str = (char *)malloc(yyleng+1);
                         yylval.str = new char[yyleng+1];
@@ -756,7 +759,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 9:
 YY_RULE_SETUP
-#line 38 "conf_lexer.lxx"
+#line 38 "../../htdig3/htcommon/conf_lexer.lxx"
 {
 			BEGIN(bracket);
 			yylval.str = new char[yyleng+1];
@@ -766,7 +769,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 10:
 YY_RULE_SETUP
-#line 45 "conf_lexer.lxx"
+#line 45 "../../htdig3/htcommon/conf_lexer.lxx"
 {
                         //yylval.str = (char*)malloc(yyleng+1);
                         yylval.str = new char[yyleng+1];
@@ -776,7 +779,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 11:
 YY_RULE_SETUP
-#line 52 "conf_lexer.lxx"
+#line 52 "../../htdig3/htcommon/conf_lexer.lxx"
 {
 			if (YY_START==bracket)
 			    BEGIN(br_string);
@@ -787,7 +790,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 12:
 YY_RULE_SETUP
-#line 60 "conf_lexer.lxx"
+#line 60 "../../htdig3/htcommon/conf_lexer.lxx"
 {
 			//yylval.str = (char *)malloc(yyleng+1-2);
                         yylval.str = new char[yyleng+1-2];
@@ -799,7 +802,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 13:
 YY_RULE_SETUP
-#line 69 "conf_lexer.lxx"
+#line 69 "../../htdig3/htcommon/conf_lexer.lxx"
 {
 			yylval.str = new char[yyleng+1];
 			strcpy(yylval.str,yytext);
@@ -808,7 +811,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 14:
 YY_RULE_SETUP
-#line 75 "conf_lexer.lxx"
+#line 75 "../../htdig3/htcommon/conf_lexer.lxx"
 {
 			//yylval.str = (char *)malloc(yyleng+1);
                         yylval.str = new char[yyleng+1];
@@ -818,17 +821,17 @@ YY_RULE_SETUP
 	YY_BREAK
 case 15:
 YY_RULE_SETUP
-#line 81 "conf_lexer.lxx"
+#line 81 "../../htdig3/htcommon/conf_lexer.lxx"
 /*   Ignore newline after "\"    */
 	YY_BREAK
 case 16:
 YY_RULE_SETUP
-#line 83 "conf_lexer.lxx"
+#line 83 "../../htdig3/htcommon/conf_lexer.lxx"
 /*   Ignore spaces               */
 	YY_BREAK
 case 17:
 YY_RULE_SETUP
-#line 85 "conf_lexer.lxx"
+#line 85 "../../htdig3/htcommon/conf_lexer.lxx"
 { /* got the include file name */
 			if ( include_stack_ptr >= MAX_INCLUDE_DEPTH )
 			    {
@@ -854,7 +857,7 @@ case YY_STATE_EOF(t_right):
 case YY_STATE_EOF(incl):
 case YY_STATE_EOF(bracket):
 case YY_STATE_EOF(br_string):
-#line 105 "conf_lexer.lxx"
+#line 105 "../../htdig3/htcommon/conf_lexer.lxx"
 {
 		        if ( --include_stack_ptr < 0 )
 		            yyterminate();
@@ -868,7 +871,7 @@ case YY_STATE_EOF(br_string):
 	YY_BREAK
 case 18:
 YY_RULE_SETUP
-#line 117 "conf_lexer.lxx"
+#line 117 "../../htdig3/htcommon/conf_lexer.lxx"
 {
 			BEGIN(INITIAL);
 			return(T_NEWLINE);
@@ -876,20 +879,28 @@ YY_RULE_SETUP
 	YY_BREAK
 case 19:
 YY_RULE_SETUP
-#line 121 "conf_lexer.lxx"
+#line 121 "../../htdig3/htcommon/conf_lexer.lxx"
 
 	YY_BREAK
 case 20:
 YY_RULE_SETUP
-#line 123 "conf_lexer.lxx"
+#line 123 "../../htdig3/htcommon/conf_lexer.lxx"
 
 	YY_BREAK
 case 21:
 YY_RULE_SETUP
-#line 124 "conf_lexer.lxx"
+#line 124 "../../htdig3/htcommon/conf_lexer.lxx"
+{ 
+	fprintf(stderr,"Unknown char in line %d: %s",yylineno,yytext);
+	exit(1);
+	}
+	YY_BREAK
+case 22:
+YY_RULE_SETUP
+#line 128 "../../htdig3/htcommon/conf_lexer.lxx"
 ECHO;
 	YY_BREAK
-#line 893 "lex.yy.c"
+#line 904 "lex.yy.c"
 
 	case YY_END_OF_BUFFER:
 		{
@@ -1773,5 +1784,5 @@ int main()
 	return 0;
 	}
 #endif
-#line 124 "conf_lexer.lxx"
+#line 128 "../../htdig3/htcommon/conf_lexer.lxx"
 
