@@ -18,7 +18,7 @@ int include_stack_ptr = 0;
 
 KEYWORD			[a-zA-Z_][a-zA-Z_0-9/]*
 NUMBER			[0-9]+
-STRING			[[:alnum:][:punct:]]+
+STRING			[\x21-\xff]+
 BR_STRING		[^ \n\t<>]+
 %%
 
@@ -121,4 +121,8 @@ include			BEGIN(incl);
 ^[[:space:]]+
 
 \n			
+<*>.|\n		{ 
+	fprintf(stderr,"Unknown char in line %d: %s",yylineno,yytext);
+	exit(1);
+	}
 %%
